Add SEO metadata without react-helmet (React 19 compatible)

--- a/index.html
+++ b/index.html
@@ -1,18 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-<link
-  href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-  rel="stylesheet"
-/>
-
+    <!-- BASIC META -->
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>SnapIt Events</title>
+
+    <!-- TITLE (VERY IMPORTANT) -->
+    <title>SnapIt Events | Wedding & Event Management in Manglore</title>
+
+    <!-- SEO META -->
+    <meta
+      name="description"
+      content="SnapIt Events specializes in weddings, sangeet, receptions, lighting, and corporate events. Creating unforgettable moments across India."
+    />
+    <meta
+      name="keywords"
+      content="SnapIt Events, wedding planners, event management, sangeet decor, reception lighting, corporate events"
+    />
+    <meta name="author" content="SnapIt Events" />
+
+    <!-- OPEN GRAPH (WhatsApp / Instagram preview) -->
+    <meta property="og:title" content="SnapIt Events | Wedding & Event Management" />
+    <meta
+      property="og:description"
+      content="Snap • Celebrate • Repeat. Wedding, lighting & corporate events."
+    />
+    <meta property="og:url" content="https://snapitevents.in" />
+    <meta property="og:type" content="website" />
+
+    <!-- FONTS -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- FAVICON (OPTIONAL but recommended) -->
+    <!-- <link rel="icon" href="/favicon.png" /> -->
   </head>
+
   <body>
     <div id="root"></div>
-      <script type="module" src="/src/main.jsx"></script>
-  
-    </body>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
