Fix Home.jsx build error (remove Helmet, keep UI)

--- a/index.html
+++ b/index.html
@@ -1,43 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <!-- BASIC META -->
     <meta charset="UTF-8" />
+
+    <title>SnapIt Events | Wedding & Event Management in Udupi & Mangalore</title>
+
+    <meta name="description" content="SnapIt Events offers premium wedding planning, sangeet decor, reception lighting and corporate event management in Udupi & Mangalore. Snap • Celebrate • Repeat." />
+
+    <meta name="keywords" content="SnapIt Events, event planners Udupi, wedding decorators Mangalore, sangeet decor, reception lighting, corporate events" />
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- TITLE (VERY IMPORTANT) -->
-    <title>SnapIt Events | Wedding & Event Management in Manglore</title>
+    <link rel="canonical" href="https://snapitevents.in/" />
 
-    <!-- SEO META -->
-    <meta
-      name="description"
-      content="SnapIt Events specializes in weddings, sangeet, receptions, lighting, and corporate events. Creating unforgettable moments across India."
-    />
-    <meta
-      name="keywords"
-      content="SnapIt Events, wedding planners, event management, sangeet decor, reception lighting, corporate events"
-    />
-    <meta name="author" content="SnapIt Events" />
-
-    <!-- OPEN GRAPH (WhatsApp / Instagram preview) -->
-    <meta property="og:title" content="SnapIt Events | Wedding & Event Management" />
-    <meta
-      property="og:description"
-      content="Snap • Celebrate • Repeat. Wedding, lighting & corporate events."
-    />
-    <meta property="og:url" content="https://snapitevents.in" />
+    <!-- Open Graph -->
+    <meta property="og:title" content="SnapIt Events | Snap • Celebrate • Repeat" />
+    <meta property="og:description" content="Premium wedding & event management in Udupi and Mangalore." />
+    <meta property="og:url" content="https://snapitevents.in/" />
     <meta property="og:type" content="website" />
 
-    <!-- FONTS -->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
-      rel="stylesheet"
-    />
-
-    <!-- FAVICON (OPTIONAL but recommended) -->
-    <!-- <link rel="icon" href="/favicon.png" /> -->
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
   </head>
-
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
