--- a/index.html
+++ b/index.html
@@ -1,29 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-
-    <title>SnapIt Events | Wedding & Event Management in Udupi & Mangalore</title>
-
-    <meta name="description" content="SnapIt Events offers premium wedding planning, sangeet decor, reception lighting and corporate event management in Udupi & Mangalore. Snap • Celebrate • Repeat." />
-
-    <meta name="keywords" content="SnapIt Events, event planners Udupi, wedding decorators Mangalore, sangeet decor, reception lighting, corporate events" />
-
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <link rel="canonical" href="https://snapitevents.in/" />
-
-    <!-- Open Graph -->
-    <meta property="og:title" content="SnapIt Events | Snap • Celebrate • Repeat" />
-    <meta property="og:description" content="Premium wedding & event management in Udupi and Mangalore." />
-    <meta property="og:url" content="https://snapitevents.in/" />
-    <meta property="og:type" content="website" />
-
-    <!-- Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet" />
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-  </body>
-</html>
+<!DOCTYPE html> <html lang="en"> <head> <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet" /> <meta charset="UTF-8" /> <meta name="viewport" content="width=device-width, initial-scale=1.0" /> <title>SnapIt Events</title> </head> <body> <div id="root"></div> <script type="module" src="/src/main.jsx"></script> </body> </html>
